# shallow-water-elliptic-drop

./: .travis.yml  CMakeLists.txt  README.md
analytical/: README.md  analytic_equations.py  circle_evolution.py  contours_hdiff.py  ellipse_evolution_odeint.py  energy_conserv.py  ermakov_invariant.py
numerical/: CMakeLists.txt  README.md  contours_h_v.py  contours_hdiff.py  errors.py  spreading_drop_2d_el.cpp  vertical_crosssection_num_an.py
